Fix for bug 164190. nsSafeSaveFile mistreats nsLocalFile, deleting files under one. Patch by sfraser, r=ccarlen, sr=alecf.